--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
@@ -50,5 +52,5 @@
     ]
   },
   "devDependencies": {},
-  "homepage": "/react-app"
+  "homepage": "https://duddoi.github.io/portfolio-react/"
 }
