--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  },
   "homepage": "https://duddoi.github.io/portfolio-react/"
 }
