--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^13.2.1",
     "classnames": "^2.5.1",
+    "immer": "^10.1.1",
     "open-color": "^1.9.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-lottie": "^1.2.10",
     "react-lottie-player": "^2.1.0",
     "react-redux": "^9.2.0",
