email form 유효성체크(useForm)

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.57.0",
     "react-lottie": "^1.2.10",
     "react-lottie-player": "^2.1.0",
     "react-redux": "^9.2.0",
