--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "immer": "^10.1.1",
     "open-color": "^1.9.1",
     "react": "19.1.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "19.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.57.0",
