--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.2.1",
     "classnames": "^2.5.1",
     "immer": "^10.1.1",
+    "moment": "^2.30.1",
     "open-color": "^1.9.1",
     "react": "19.1.0",
     "react-calendar": "^6.0.0",
