--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.10.0",
     "classnames": "^2.5.1",
     "immer": "^10.1.1",
     "moment": "^2.30.1",
